// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - badge danger renders correctly 1`] = `
<span
  class="badge bg-danger"
>
  A simple badge!
</span>
`;

exports[`OE - badge dark renders correctly 1`] = `
<span
  class="badge bg-dark"
>
  A simple badge!
</span>
`;

exports[`OE - badge info renders correctly 1`] = `
<span
  class="badge bg-info"
>
  A simple badge!
</span>
`;

exports[`OE - badge light renders correctly 1`] = `
<span
  class="badge bg-light text-dark"
>
  A simple badge!
</span>
`;

exports[`OE - badge primary renders correctly 1`] = `
<span
  class="badge bg-primary"
>
  A simple badge!
</span>
`;

exports[`OE - badge renders correctly as a rounded pill 1`] = `
<span
  class="badge bg-primary rounded-pill"
>
  A simple badge!
</span>
`;

exports[`OE - badge renders correctly with a link 1`] = `
<a
  href="http://example.com"
  title="A simple badge!"
>
  <span
    class="badge bg-primary"
  >
    A simple badge!
  </span>
</a>
`;

exports[`OE - badge renders correctly with assistive text 1`] = `
<span
  class="badge bg-primary"
>
  <span
    class="visually-hidden"
  >
    An assistive text
  </span>
  A simple badge!
</span>
`;

exports[`OE - badge secondary renders correctly 1`] = `
<span
  class="badge bg-secondary"
>
  A simple badge!
</span>
`;

exports[`OE - badge success renders correctly 1`] = `
<span
  class="badge bg-success"
>
  A simple badge!
</span>
`;

exports[`OE - badge warning renders correctly 1`] = `
<span
  class="badge bg-warning"
>
  A simple badge!
</span>
`;
